Add commitment_atx_id
