# shared/types.go
@@ -7,8 +7,9 @@ type ATXID []byte
 //go:generate scalegen -types InitialPost,Challenge
 
 type InitialPost struct {
-	Proof    shared.Proof
-	Metadata shared.ProofMetadata
+	Proof           shared.Proof
+	Metadata        shared.ProofMetadata
+	CommitmentAtxId ATXID
 }
 
 type LayerID uint32
